test_suite5/ALAN/test_suite/alan-2022-examples/passing/000011_pair.alan
source Nd begin boolean z928; while 30 do relax end end
